{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 102,
  "lineage": "ba8610c8-a396-7ba6-bb86-78a5fe1d7852",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05f8addf6121a3888",
            "arn": "arn:aws:ec2:us-west-2:686699774218:instance/i-0d463d398546814e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d463d398546814e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ruoxi-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d58b66a528f8b7bd"
              }
            ],
            "primary_network_interface_id": "eni-0d58b66a528f8b7bd",
            "private_dns": "ip-10-1-1-102.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.102",
            "public_dns": "ec2-34-219-244-60.us-west-2.compute.amazonaws.com",
            "public_ip": "34.219.244.60",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bdcc238f40eab6fd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a3930087d250732",
            "tags": {
              "Name": "tf-asb-flow-ruoxi-app-a"
            },
            "tags_all": {
              "Name": "tf-asb-flow-ruoxi-app-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d1149097b5af422"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-0d463d398546814e2",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.allow_http_ssh",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "tls_private_key.ed25519"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05f8addf6121a3888",
            "arn": "arn:aws:ec2:us-west-2:686699774218:instance/i-08ad08b74aa1de617",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ad08b74aa1de617",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ruoxi-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-050689d6cd89ce298"
              }
            ],
            "primary_network_interface_id": "eni-050689d6cd89ce298",
            "private_dns": "ip-10-1-2-126.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.126",
            "public_dns": "ec2-18-237-93-242.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.93.242",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e0c0b73663c1022f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013f9f99413dae196",
            "tags": {
              "Name": "tf-asb-flow-ruoxi-app-b"
            },
            "tags_all": {
              "Name": "tf-asb-flow-ruoxi-app-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d1149097b5af422"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-08ad08b74aa1de617",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.allow_http_ssh",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "tls_private_key.ed25519"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05f8addf6121a3888",
            "arn": "arn:aws:ec2:us-west-2:686699774218:instance/i-032a000f512728143",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-032a000f512728143",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ruoxi-ssh-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-064772252c9b4ff8e"
              }
            ],
            "primary_network_interface_id": "eni-064772252c9b4ff8e",
            "private_dns": "ip-10-1-3-181.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.181",
            "public_dns": "ec2-35-92-107-119.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.107.119",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00b093bb89aba14a6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1bd76328987002b",
            "tags": {
              "Name": "tf-asb-flow-ruoxi-app-c"
            },
            "tags_all": {
              "Name": "tf-asb-flow-ruoxi-app-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01d1149097b5af422"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "i-032a000f512728143",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_key_pair.my_key",
            "aws_security_group.allow_http_ssh",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "tls_private_key.ed25519"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:internet-gateway/igw-030dca82b1326329f",
            "id": "igw-030dca82b1326329f",
            "owner_id": "686699774218",
            "region": "us-west-2",
            "tags": {
              "Name": "tf-asb-flow-ruoxi-igw"
            },
            "tags_all": {
              "Name": "tf-asb-flow-ruoxi-igw"
            },
            "vpc_id": "vpc-0c9f4dc67a0edbbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "igw-030dca82b1326329f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:loadbalancer/app/tf-asb-flow-ruoxi-alb/ffbe3021e747cc4d",
            "arn_suffix": "app/tf-asb-flow-ruoxi-alb/ffbe3021e747cc4d",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-asb-flow-ruoxi-alb-245842857.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:686699774218:loadbalancer/app/tf-asb-flow-ruoxi-alb/ffbe3021e747cc4d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-asb-flow-ruoxi-alb",
            "preserve_host_header": false,
            "region": "us-west-2",
            "security_groups": [
              "sg-03651a2db670ea5b2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013f9f99413dae196"
              },
              {
                "subnet_id": "subnet-07a3930087d250732"
              },
              {
                "subnet_id": "subnet-0b1bd76328987002b"
              }
            ],
            "subnets": [
              "subnet-013f9f99413dae196",
              "subnet-07a3930087d250732",
              "subnet-0b1bd76328987002b"
            ],
            "tags": {
              "Name": "tf-asb-flow-ruoxi-alb"
            },
            "tags_all": {
              "Name": "tf-asb-flow-ruoxi-alb"
            },
            "vpc_id": "vpc-0c9f4dc67a0edbbe9",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:loadbalancer/app/tf-asb-flow-ruoxi-alb/ffbe3021e747cc4d"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:listener/app/tf-asb-flow-ruoxi-alb/ffbe3021e747cc4d/578f5ac708b5d67f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:686699774218:listener/app/tf-asb-flow-ruoxi-alb/ffbe3021e747cc4d/578f5ac708b5d67f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:loadbalancer/app/tf-asb-flow-ruoxi-alb/ffbe3021e747cc4d",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-west-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:listener/app/tf-asb-flow-ruoxi-alb/ffbe3021e747cc4d/578f5ac708b5d67f"
          },
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953",
            "arn_suffix": "targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:686699774218:loadbalancer/app/tf-asb-flow-ruoxi-alb/ffbe3021e747cc4d"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-asb-flow-ruoxi-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-west-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c9f4dc67a0edbbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953,i-0d463d398546814e2,80",
            "port": 80,
            "region": "us-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953",
            "target_id": "i-0d463d398546814e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "port": 80,
            "region": "us-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953",
            "target_id": "i-0d463d398546814e2"
          },
          "dependencies": [
            "aws_instance.app",
            "aws_key_pair.my_key",
            "aws_lb_target_group.app",
            "aws_security_group.allow_http_ssh",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "tls_private_key.ed25519"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953,i-08ad08b74aa1de617,80",
            "port": 80,
            "region": "us-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953",
            "target_id": "i-08ad08b74aa1de617"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "port": 80,
            "region": "us-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953",
            "target_id": "i-08ad08b74aa1de617"
          },
          "dependencies": [
            "aws_instance.app",
            "aws_key_pair.my_key",
            "aws_lb_target_group.app",
            "aws_security_group.allow_http_ssh",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "tls_private_key.ed25519"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953,i-032a000f512728143,80",
            "port": 80,
            "region": "us-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953",
            "target_id": "i-032a000f512728143"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "port": 80,
            "region": "us-west-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:686699774218:targetgroup/tf-asb-flow-ruoxi-tg/ee0529ea08901953",
            "target_id": "i-032a000f512728143"
          },
          "dependencies": [
            "aws_instance.app",
            "aws_key_pair.my_key",
            "aws_lb_target_group.app",
            "aws_security_group.allow_http_ssh",
            "aws_subnet.subnets",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "tls_private_key.ed25519"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:route-table/rtb-0cae4672b00cfbb81",
            "id": "rtb-0cae4672b00cfbb81",
            "owner_id": "686699774218",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-030dca82b1326329f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-asb-flow-ruoxi-public-rt"
            },
            "tags_all": {
              "Name": "tf-asb-flow-ruoxi-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9f4dc67a0edbbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "rtb-0cae4672b00cfbb81",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028628b1601a18813",
            "region": "us-west-2",
            "route_table_id": "rtb-0cae4672b00cfbb81",
            "subnet_id": "subnet-07a3930087d250732"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "rtbassoc-028628b1601a18813",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2d49d2f49670160",
            "region": "us-west-2",
            "route_table_id": "rtb-0cae4672b00cfbb81",
            "subnet_id": "subnet-013f9f99413dae196"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "rtbassoc-0f2d49d2f49670160",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02893b66bbd1f7ad7",
            "region": "us-west-2",
            "route_table_id": "rtb-0cae4672b00cfbb81",
            "subnet_id": "subnet-0b1bd76328987002b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "rtbassoc-02893b66bbd1f7ad7",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.subnets",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:security-group/sg-03651a2db670ea5b2",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03651a2db670ea5b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "686699774218",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0c9f4dc67a0edbbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sg-03651a2db670ea5b2",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:security-group/sg-01d1149097b5af422",
            "description": "Allow HTTP \u0026 SSH inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d1149097b5af422",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http_ssh",
            "name_prefix": "",
            "owner_id": "686699774218",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh"
            },
            "tags_all": {
              "Name": "allow_http_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c9f4dc67a0edbbe9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sg-01d1149097b5af422",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:subnet/subnet-07a3930087d250732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a3930087d250732",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "tf-asb-flow-ruoxi-subnet-a"
            },
            "tags_all": {
              "Name": "tf-asb-flow-ruoxi-subnet-a"
            },
            "vpc_id": "vpc-0c9f4dc67a0edbbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "subnet-07a3930087d250732",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:subnet/subnet-013f9f99413dae196",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013f9f99413dae196",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "tf-asb-flow-ruoxi-subnet-b"
            },
            "tags_all": {
              "Name": "tf-asb-flow-ruoxi-subnet-b"
            },
            "vpc_id": "vpc-0c9f4dc67a0edbbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "subnet-013f9f99413dae196",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:subnet/subnet-0b1bd76328987002b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1bd76328987002b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "686699774218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "tf-asb-flow-ruoxi-subnet-c"
            },
            "tags_all": {
              "Name": "tf-asb-flow-ruoxi-subnet-c"
            },
            "vpc_id": "vpc-0c9f4dc67a0edbbe9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "subnet-0b1bd76328987002b",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:vpc/vpc-0c9f4dc67a0edbbe9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-03b7b3752fb3ef3a0",
            "default_route_table_id": "rtb-0f380fd33a7c94c74",
            "default_security_group_id": "sg-0e9d96b69f8384d01",
            "dhcp_options_id": "dopt-011822c36de9fc493",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c9f4dc67a0edbbe9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f380fd33a7c94c74",
            "owner_id": "686699774218",
            "region": "us-west-2",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "tf-asb-flow-ruoxi"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "tf-asb-flow-ruoxi"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "vpc-0c9f4dc67a0edbbe9",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:security-group-rule/sgr-0888ad4b9f72649fb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0888ad4b9f72649fb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-01d1149097b5af422",
            "security_group_rule_id": "sgr-0888ad4b9f72649fb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sgr-0888ad4b9f72649fb",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_http_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:security-group-rule/sgr-02b92b504cc3c1e5e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-02b92b504cc3c1e5e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-01d1149097b5af422",
            "security_group_rule_id": "sgr-02b92b504cc3c1e5e",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sgr-02b92b504cc3c1e5e",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:686699774218:security-group-rule/sgr-0c1c40d1b259aa5f8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0c1c40d1b259aa5f8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-01d1149097b5af422",
            "security_group_rule_id": "sgr-0c1c40d1b259aa5f8",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "686699774218",
            "id": "sgr-0c1c40d1b259aa5f8",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.allow_http_ssh",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}